tests/ui/dropck/dropck-only-error-gat.stderr
error[E0277]: the trait bound `<T1 as Trait1>::Associated: Clone` is not satisfied
  --> $DIR/dropck-only-error-gat.rs:37:21
   |
LL |     pub fn new() -> Self {
   |                     ^^^^ the trait `Clone` is not implemented for `<T1 as Trait1>::Associated`
   |
note: required by a bound in `GatTrait::Gat`
  --> $DIR/dropck-only-error-gat.rs:14:17
   |
LL |     type Gat<T: Clone>;
   |                 ^^^^^ required by this bound in `GatTrait::Gat`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
